...
        android:textColor="?attr/colorOnSurface"
        tools:text="이 레코드를 신고하시겠어요?" />

    <include layout="@layout/view_separator" />

    <TextView
        android:id="@+id/tv_ok"
        style="@style/TextAppearance.Mogle.Subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="13dp"
        android:textColor="?attr/colorPrimary"
...
