...
            <View
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btn_complete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="탈퇴하기"
                android:textSize="16sp"
                android:textColor="@color/white"
...
